# KCE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
app/: main.py
dev/: notes.txt  setup.bat  submodules.txt
engine/: CMakeLists.txt
engine/draw/: CMakeLists.txt  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
engine/python/: CMakeLists.txt  main.cpp
engine/utils/: CMakeLists.txt  files.cpp  files.hpp
engine/window/: CMakeLists.txt  window.cpp  window.hpp
engine/window/include/: window.hpp
engine/window/source/: window.cpp
